--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin: 600px auto;
+    width: 20%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
+    padding: 20px;
+    list-style: square;
     font-weight: bold;
 }
 nav ul li, footer ul li {
