--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,13 @@
 			<!-- link to main stylesheet -->
 		</head>
 		<body>
+			<nav>
 	    		<ul>
 	        		<li><a href="/main">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
+			</nav>
 			<div class="container">
 			
 			{{ content }}
