--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+	<html>
+		<head>
+			<title>{{ page.title }}</title>
+			<!-- link to main stylesheet -->
+		</head>
+		<body>
+	    		<ul>
+	        		<li><a href="/main">Home</a></li>
+		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
+			<div class="container">
+			
+			{{ content }}
+			
+			</div><!-- /.container -->
+			<footer>
+	    		<ul>
+	        		<li><a href="mailto:hjb_zy@hotmail.com">email</a></li>
+	        		<li><a href="https://jianbinghuang.github.io/main">github.com/jianbinghuang</a></li>
+			</ul>
+			</footer>
+		</body>
+	</html>
