--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>{{ page.title }}</title>
+			<title>{{ Jianbing Huang's website }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
 			<nav>
 	    		<ul>
-		        	<li><a href="/Home">About</a></li>
+		        	<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
@@ -16,7 +16,10 @@
 			</nav>
 			<div class="container">
 			
-			{{ content }}
+    			<div class="blurb">
+        			<h1>Hi there, I'm Jianbing Huang!</h1>
+					<p>I'm learning to build a website about <em>Computational Geometry</em>. <a href="/about">Read more about my life...</a></p>
+    			</div><!-- /.blurb -->
 			
 			</div><!-- /.container -->
 			<footer>
