--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 		<head>
 			<title>{{ Jianbing Huang's website }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/main/css/main.css">
 		</head>
 		<body>
 			<nav>
 	    		<ul>
-		        	<li><a href="/">Home</a></li>
+		        	<li><a href="/main">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
