--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,16 @@
 		<body>
 			<nav>
 	    		<ul>
-		        	<li><a href="/main">Home</a></li>
-		        	<li><a href="/main/about">About</a></li>
-	        		<li><a href="/main/cv">CV</a></li>
-	        		<li><a href="/main/blog">Blog</a></li>
+		        	<li><a href="/">Home</a></li>
+		        	<li><a href="/about">About</a></li>
+	        		<li><a href="/cv">CV</a></li>
+	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
-			
+
 			{{ content }}
-			
+
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
