--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:hjb_zy@hotmail.com">email</a></li>
-	        		<li><a href="https://jianbinghuang.github.io/main">github.com/jianbinghuang</a></li>
+	        		<li><a href="https://jianbinghuang.github.io">github.com/jianbinghuang</a></li>
 			</ul>
 			</footer>
 		</body>
